Fixed img border spacing

--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -98,26 +98,8 @@ footer {
 	background-color: #e1dbd2;
 	color: #764637;
 }
-/*
-.container{
-	width: 87.2em;
-	margin: 0 auto;
-	height: 0 2.2em 0 2.2em;
-}
-
-#feature{
-	width: 58.4em%;
-	float: left;
-}
-
-#bio{
-	margin-left: 28.7em;
-	float: right;
-}
-*/
 
 .container{
-	margin-left: 1.3em;
 	display: flex;
 	width: 100%;
 }
@@ -125,19 +107,30 @@ footer {
 #feature{
 	flex-basis: 60%;
 	padding: 1em;
+	margin: .5em 0em 0em 1.3em;
 }
 
 #bio{
-	flex-basis: 25%;
+	flex-basis: 40%;
 	padding: 1em;
 }
 
+img {
+	display: block;
+}
+
 .bioPic{
+	float:left;
 	width: 124px;
 	height: 126px;
 	border:2px solid black;
+	
     border-radius: 124px;
     -webkit-border-radius: 124px;
     -moz-border-radius: 124px;
+	
+}
 
+.bioTxt {
+	line-height: 1.2em;
 }
